@@ -1,9 +1,10 @@
-% SCIMAT  Struct used in Gerardus to store 3D images and their metadata.
+% SCIMAT  Struct used in Gerardus to store 2D, 3D or 3D+t images and axis
+% metainformation.
 %
 %   Medical image processing usually requires knowledge not only of voxel
 %   intensity values, but of voxel size, image orientation and position.
 %   Hence, in Gerardus we use a struct, that we call SCIMAT, to enrich
-%   images. An example of a SCIMAT image:
+%   images with metainformation. An example of a SCIMAT image:
 %
 %   scimat = 
 %   
@@ -11,53 +12,45 @@
 %           axis:   [3x1 struct]
 %           rotmat: [3x3 double]
 %
-%   data:   A 3D array that contains the image voxels.
-%   axis:   A 3-vector with the following fields:
-%       size:    Image size.
-%       spacing: Voxel size, i.e. spacing between voxel centres. 
-%       min:     Coordinates of the "bottom-left" corner of the image, NOT
-%                of the first voxel's centre. The first voxel's centre
-%                coordinates = min+spacing/2.
-%       max:     Unused.
-%       center:  Unused.
-%       unit:    Spacing, center and min units.
-%       label:   Unused.
-%   rotmat: A (3, 3)- matrix that gives the image orientation as a rotation
-%           of the x, y, z Cartesian axes.
+%   * data:   The image or segmentation.
+%   * axis:   Axes metainformation (voxel size, offset and number of voxels).
+%   * rotmat: Rotation matrix.
 %
-%   The SCIMAT struct follows the Matlab convention that image arrays are
-%   sorted as (y, x, z)
+% -------------------------------------------------------------------------
+%
+%   In detail:
+%
+%   * data:   A 2D to 4D array that contains the image/segmentation voxels.
+%
+%   * axis:   Axes metainformation. A 1 to 4-vector, depending on the
+%             number of dimensions of the image.
 %
 %     axis(1) ==> rows
 %     axis(2) ==> columns
 %     axis(3) ==> slices
+%     axis(4) ==> time frames
 %
-%   but rotations and point coordinates are given as (x, y, z).
+%     Each axis element contains the fields:
 %
-%   In the earlier versions of Gerardus, SCIMAT was called NRRD. A bad
-%   choice, as SCIMAT has nothing to do with the NRRD format developed by
-%   the Teem project (http://teem.sourceforge.net/nrrd/format.html). But
-%   there are still some functions in Gerardus that haven't been upgraded
-%   and have names like "scinrrd_*" instead of "scimat_*".%
+%       size:    Image size.
+%       spacing: Voxel size, i.e. spacing between voxel centres. 
+%       min:     Coordinates of the "bottom-left" corner of the image, NOT
+%                of the first voxel's centre. The first voxel's centre
+%                coordinates is offset = min+spacing/2.
 %
-%   SCIMAT is based on the struct generated by the visualization platform
-%   Seg3D, developed by the University of Utah Scientific Computing and
-%   Imaging (SCI) Institute. When you save an image or segmentation to
-%   Matlab format from Seg3D, the file contains a struct with the name
-%   "scirunnrrd". Compared to SCIMAT, this struct has an extra dummy
-%   dimension and the (rows,columns) in the image are switched.
+%   * rotmat: Rotation matrix. A (2, 2) or (3, 3)- matrix for images that
+%             are not aligned with the XY- or XYZ-Cartesian axes.
 %
-%   >>  scirunnrrd
+%   Note: scimat.axis follows the Matlab convention that in an image
+%   (rows, cols) <=> (y, x), but scimat.rotmat is given for (x, y).
 %
-%   scirunnrrd = 
-%
-%          data: [4-D uint8]
-%          axis: [4x1 struct]
-%      property: []
+%   As a historical note, SCIMAT derives from the "scirunnrrd" struct
+%   exported by the visualization platform Seg3D, University of Utah
+%   Scientific Computing and Imaging (SCI) Institute.
 
 % Author: Ramon Casero <rcasero@gmail.com>
-% Copyright © 2014 University of Oxford
-% Version: 0.1.0
+% Copyright © 2014-2015 University of Oxford
+% Version: 0.2.0
 % $Rev$
 % $Date$
 % 
