@@ -1,3 +1,10 @@
+2015-02-11  Ramon Casero  <rcasero@gmail.com>
+
+	* matlab/FiltersToolbox/scimat.m: (0.2.0)
+
+	- Rewrite, as we are going to be using rotation matrices and 3D+t
+	volumes regularly.
+
 2015-02-11  Benjamin Villard  <b.0134@gmail.com>
 
 	- Added the offset for the position of the pixel coordinates in
